@@ -47,10 +47,15 @@ int handle__pubackcomp(struct mosquitto *mosq, const char *type)
 	int rc;
 	mosquitto_property *properties = NULL;
 	int qos;
+	int state;
 
 	assert(mosq);
 
-	if(mosq->state != mosq_cs_connected){
+	pthread_mutex_lock(&mosq->state_mutex);
+	state = mosq->state;
+	pthread_mutex_unlock(&mosq->state_mutex);
+
+	if(state != mosq_cs_connected){
 		return MOSQ_ERR_PROTOCOL;
 	}
 
